<resources>
    <string name="app_name">FirstApplication</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="login">You have an account ? Log-in</string>
    <string name="second_text">Find projects from companies everywhere in the word</string>
    <string name="skip">Skip</string>
    <string name="log_in">Log-in</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="log_in2">You have an account ? Log-in</string>
    <string name="sin_up">Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>