<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles3"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/button_spiice"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="156dp"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/sin_up"
        android:textColor="@color/white"
        android:textAppearance="@style/spiice"
        android:background="@drawable/my_buttons"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="25dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="693dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="98dp"
        android:fontFamily="@font/public_sans_medium"
        android:gravity="center"
        android:onClick="logIn2"
        android:text="@string/log_in2"
        android:textColor="@color/text_clor_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="343dp"
        android:layout_height="412dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="656dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:gravity="center"
        android:text="@string/sin_up"
        android:textAppearance="@style/spiice"
        android:textColor="@color/text_clor_black"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/rectangle_second"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/rectangle_second"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="572dp"
        android:background="@drawable/rectangle_second"
        android:ems="10"
        android:fontFamily="@font/public_sans_regular"

        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="496dp"
        android:background="@drawable/rectangle_second"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>