<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles2"
    tools:context=".FirstViewAcivity"
    >

    <TextView

        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="722dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/spiice"
        android:textColor="@color/text_clor_black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="253dp"
        android:layout_height="58dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="111dp"
        android:fontFamily="@font/public_sans_regular"
        android:gravity="center"
        android:text="@string/second_text"
        android:textColor="@color/text_clor_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/sip_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:fontFamily="@font/public_sans_regular"
        android:text="@string/skip"
        android:textColor="@color/text_clor_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="271dp"
        android:layout_height="271dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="261dp"
        android:rotation="60"
        android:src="@drawable/planet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>